--- a/lib/templates/layout/email.html.eex
+++ b/lib/templates/layout/email.html.eex
@@ -1,5 +1,5 @@
 
-<div style="background: #1c4ed8; padding: 9px;">
+<div style="background: #1c4ed8; padding: 9px; color: white; font-weight: bold; font-size: 20px; ">
     <img src="<%= @base_url %>/img/logo.png" style="width: 40px; height: 40px; margin: 18px;">
 </div>
 
